@@ -2,6 +2,7 @@
 
 * Launched German (de), Lithuanian (lt), Polish (pl), Swedish (sv)
 * New icons for layer switcher, minimap
+* Fix tab index bug for search
 
 <b>2009-06-26</b>
 
